[project]
name = "gym-aloha"
version = "0.1.1"
description = "A gym environment for ALOHA"
authors = [
  { name = "Rémi Cadène", email = "re.cadene@gmail.com" },
  { name = "Quentin Gallouédec", email = "quentin.gallouedec@ec-lyon.fr" },
  { name = "Alexander Soare", email = "alexander.soare159@gmail.com" },
  { name = "Simon Alibert", email = "alibert.sim@gmail.com" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = [
  "robotics",
  "deep",
  "reinforcement",
  "learning",
  "aloha",
  "environment",
  "gym",
  "gymnasium",
  "dm-control",
  "mujoco",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.12"
dependencies = [
  "gymnasium>=0.29.1",
  "dm-control>=1.0.14",
  "imageio[ffmpeg]>=2.34.0",
]

[project.optional-dependencies]
dev = ["pre-commit>=3.7.0", "debugpy>=1.8.1"]
test = ["pytest>=8.1.0", "pytest-cov>=5.0.0"]

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [
  "example.py",
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]
ignore-init-module-imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
